--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-MONGO_URL = "mongodb+srv://booking:<password>@cluster0.fdow2kv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0";
+MONGO_URL="mongodb+srv://booking:nO8kxKvfBVVDA4gv@cluster0.fdow2kv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
